Add problems regarding vibration movement and possible solution approaches.

--- a/article/content/conclusion.tex
+++ b/article/content/conclusion.tex
@@ -6,7 +6,7 @@
 In dieser Arbeit wurde die Grundlagen für das Projekt \emph{Embedded Chess Pieces} geschaffen. Im Verlauf des Semesters wurde die Schachlogik sowie -strukturen implementiert, sodass eine Schachfigur auf einem Schachbrett simuliert werden kann. Dabei kann aus allen gängigen Schachfiguren ausgewählt werden. Die Züge werden validiert und nur durchgeführt, falls diese nach den gängigen Regeln~\cite{justUSChessFederations2019} erlaubt sind. Die Validität eines Zuges wird dabei über ein Farbsignal angezeigt.
 
 % Herausforderung: Bewegung
-Anhand einer gegeben Feld"=Reihenfolge bewegt sich der Dezibot zum gewünschten Feld. Die Bewegung stellte eine besonders große Herausforderung dar, welche in mehreren Iterationen kontinuierlich verbessert wurde.
+Anhand einer gegeben Feld"=Reihenfolge bewegt sich der Dezibot zum gewünschten Feld. Die Bewegung stellte eine besonders große Herausforderung dar. Insgesamt wurde dieses Projekt mit den auflegten Constraints umgesetzt, ohne die Hardware des Dezibots zu verändern. Die Bewegung wurde ausschließlich Software"=seitig gesteuert und in mehreren Iterationen stetig verbessert.
 
 % Bewegung Iterationen
 So wurde zunächst die Erkennung der Farbe eines Schachfeldes implementiert, welche die Basis für die Vorwärtsbewegung um jeweils ein Feld bildete. Anschließend wurde eine 90°-Drehung implementiert, welche dem Dezibot erlaubt, sich in alle Richtungen zu bewegen. Diese wurden in der allgemeinen Move"=Funktion zusammengefasst, sodass der Dezibot eigenständig bestimmt, wie diese beiden Komponenten zusammengesetzt werden können, um ein gewünschtes Feld zu erreichen. Anschließend wurde eine Plausibilitätsprüfung für die Rotation hinzugefügt, welche etwaige Fehler bei der Rotation bemerkt. Anschließend wurde ein Regelsystem für die Rotation eingeführt, welche auf den Infrarot"=Signalen eines weiteren \emph{Beacon}"=Dezibots basiert. Ferner wurde eine Kalibrierung der Farberkennung implementiert sowie ein neuer Infrarot"=basierter Ansatz zur Erkennung der Feldfarbe erarbeitet. Weitere Verbesserungsvorschläge wurden im Rahmen dieser Arbeit ausführlich diskutiert.
