--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -140,6 +140,18 @@
   organization = {Matplotlib 3.10.0 documentation}
 }
 
+@patent{normanVehikelInsbesondereSpielzeugRoboter2014,
+  type = {patenteu},
+  title = {Vehikel, insbesondere Spielzeug-Roboter mit Vibrationsantrieb},
+  author = {Norman, David Anthony and Mimlitch, Iii Robert H. and Galletti, Douglas Michael and Carter, Joel Reagan},
+  holder = {{Innovation First Inc}},
+  date = {2014-01-29},
+  number = {2484418B1},
+  url = {https://patents.google.com/patent/EP2484418B1/en/},
+  urldate = {2025-03-25},
+  langid = {ngerman}
+}
+
 @software{richterCurvesHubDezibotDebugInterface2025,
   title = {{{CurvesHub}}/{{DezibotDebugInterface}}},
   author = {Richter, Jens and Sosedow, Tom},
