Remove obsolete todo.

--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -297,9 +297,7 @@ Diese Gedanken werden in \texttt{ECPMove"-ment::""rotate"-To"-Angle} umgesetzt.
 
 \subsubsection{Auftretende Probleme}
 
-Insgesamt ist die Infrarot"=basierte Rotation der aktuell vielversprechenste Versuch, der zur Abgabe der Arbeit implementiert ist.
-% TODO: Prüfen vor Abgabe!
-Dennoch sind einige Probleme aufgetreten, die im folgenden erläutert werden.
+Insgesamt ist die Infrarot"=basierte Rotation der aktuell vielversprechenste Versuch, der zur Abgabe der Arbeit implementiert ist. Dennoch sind einige Probleme aufgetreten, die im folgenden erläutert werden.
 
 % Problem: Unterschiede in IR-Sensoren
 
