--- a/article/content/appendix.tex
+++ b/article/content/appendix.tex
@@ -28,7 +28,7 @@ Die gemessenen Rohdaten (einzelne Sensorwerte sowie Winkel) können auf GitHub\f
 \begin{table}[h!]
     \centering
     \input{../assets/measurements/rotation_measurements.tex}
-    \caption{Messungen der Infrarot-basierten Rotation (vgl. \autoref{sec:movement-ir}). $\varphi_{\text{initial}}$: initialer Winkel, in dem Dezibot ausgerichtet ist. $\varphi_{\text{goal}}$: Ziel-Winkel, in dem Dezibot nach erfolgreicher Rotation ausgerichtet sein sollte. $\varphi_{\text{end}}$: Winkel, in dem Dezibot nach Rotation tatsächlich ausgerichtet war. $\Delta\varphi = \vert\varphi_{\text{end}}-\varphi_{\text{goal}}\vert$.}
+    \caption{Messungen der Infrarot-basierten Rotation (vgl. \autoref{sec:movement-ir}). $\alpha_{\text{initial}}$: initialer Winkel, in dem Dezibot ausgerichtet ist. $\alpha_{\text{goal}}$: Ziel-Winkel, in dem Dezibot nach erfolgreicher Rotation ausgerichtet sein sollte. $\alpha_{\text{end}}$: Winkel, in dem Dezibot nach Rotation tatsächlich ausgerichtet war. $\Delta\alpha = \vert\alpha_{\text{end}}-\alpha_{\text{goal}}\vert$.}
     \label{tab:measurements-ir-rotation}
 \end{table}
 
