--- a/article/content/intro.tex
+++ b/article/content/intro.tex
@@ -2,7 +2,7 @@
 
 \section{Einführung}
 
-Im Modul \emph{Software Entwicklung für Eingebettete Systeme} arbeiten Studierende mit dem Lehr- und Lernroboter \emph{Dezibot 4}~\cite{dezibotteamDezibotDezibot2025}. Dafür soll jedes Team ein eigenes Projekt erarbeiten.
+Im Modul \emph{Software Entwicklung für Eingebettete Systeme} arbeiten Studierende mit dem Lehr- und Lernroboter \emph{Dezibot}$_\textit{4}$~\cite{dezibotteamDezibotDezibot2025}. Dafür soll jedes Team ein eigenes Projekt erarbeiten.
 
 In unserem Projekt -- \emph{Embedded Chess Pieces} -- soll zunächst ein Dezibot auf ein Schachbrett gesetzt werden, welcher sich wie eine bestimmte Schachfigur verhält. Dabei können alle gängigen Schachfiguren vom Dezibot simuliert werden. Die gewählte Figur wird anschließend auf dem Display zur Identifikation angezeigt.
 
@@ -34,4 +34,4 @@ Außerhalb des Projektrahmens ist außerdem eine kontaktlose Verbindung zu den S
 
 \subsection{Aufbau der Arbeit}
 
-In den folgenden Kapiteln wird auf die Projektstruktur und die Schachstrukturen sowie die entsprechende Logik eingegangen. Anschließend wird die Bewegung des Roboters genauer beleuchtet, in dem die einzelnen Iterationen darlegt werden. Schlussendlich folgt ein Fazit sowie ein Ausblick, wie dieses Projekt weiterentwickelt werden kann.
+In den folgenden Kapiteln wird auf die Projektstruktur und die Schachstrukturen sowie die entsprechende Logik eingegangen. Anschließend wird die Bewegung des Roboters genauer beleuchtet, in dem die einzelnen Iterationen darlegt werden. Schlussendlich folgt ein Ausblick, wie dieses Projekt weiterentwickelt werden kann, sowie ein Fazit.
