--- a/article/content/perspective.tex
+++ b/article/content/perspective.tex
@@ -31,7 +31,7 @@ Konkret könnte analog ein Aufsatz für die Beine des Dezibots entwickelt werden
 
 % Bewegung: Verbesserung Iterationen
 
-Insgesamt wurde dieses Projekt mit den auferlegten Constraints umgesetzt, ohne die Hardware des Dezibots zu verändern. Es wurden verschiedene Ansätze in mehreren Iterationen implementiert, welche jedoch weiter verbessert werden können. Wie bereits in \autoref{sec:ir-rotation-improvements} erläutert, gibt es ausreichend Potenzial, um die Rotation weiter zu verbessern. Auch für die Farberkennung von Feldern mittels Infrarot wäre eine Kommunikation hilfreich (siehe \autoref{sec:colour-calibration-ir}). So könnte jenen mitgeteilt werden, wann das Infrarot"=Signal an- bzw. ausgeschaltet werden soll, ohne dass eine manuelle Intervention der Spielenden notwendig ist. Ebenso ist es denkbar, anstelle von zusätzlichen Beacons, andere Figuren als Stütze zu verwenden.
+Insgesamt wurde dieses Projekt mit den auferlegten Constraints umgesetzt, ohne die Hardware des Dezibots zu verändern. Es wurden verschiedene Ansätze in mehreren Iterationen implementiert, welche jedoch weiter verbessert werden können. Wie bereits in \autoref{sec:ir-rotation-improvements} erläutert, gibt es ausreichend Potenzial, um die Rotation weiter zu verbessern. Auch für die Farberkennung von Feldern mittels Infrarot wäre eine Kommunikation hilfreich (siehe \autoref{sec:colour-calibration-ir}). So könnte dem Beacon mitgeteilt werden, wann das Infrarot"=Signal an- bzw. ausgeschaltet werden soll, ohne dass eine manuelle Intervention der Spielenden notwendig ist. Ebenso ist es denkbar, anstelle von zusätzlichen Beacons, andere Figuren als Stütze zu verwenden.
 
 % Kommunikation --> Mittelung von Zügen
 
