--- a/article/content/structure.tex
+++ b/article/content/structure.tex
@@ -32,4 +32,4 @@ Die Business"=Logic ist im \texttt{src}-Verzeichnis des Projektes \texttt{exampl
 
 Unter \texttt{examples} befinden sich verschiedene Arduino-Sketches, u.a. zum Testen einzelner Funktionen. Außerdem sind dort die zwei wichtigen Sketches, welche für die finale Vorführung (\texttt{showcase}\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/tree/main/example/EmbeddedChessPieces/examples/showcase}}) notwendig sind, abgelegt. Dabei handelt es sich um einen Infrarot-Emitter, welcher in \autoref{sec:movement-ir} erläutert wird, sowie um einen Sketch, der auf dem Dezibot läuft, welcher schlussendlich die Schachfigur simuliert. Zum Ausprobieren wurde weiterhin ein \texttt{playground}"=Sketch\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/blob/main/example/EmbeddedChessPieces/examples/playground/playground.ino}} als Schritt"=für"=Schritt"=Anleitung hinzugefügt, mit welchem verschiedene implementierte Funktionen ausprobiert werden können.
 
-Für die Einrichtung muss müssen alle notwendigen Third"=Party"=Packages installiert werden, welche für das \texttt{dezibot}"=Package notwendig sind. Zusätzlich muss ein symbolischer Link vom Projekt"=Repository sowie \texttt{example/""Embedded\-Chess\-Pieces} in das Arduino"=Library"=Verzeichnis gelegt werden. Weitere Informationen können aus der README\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/blob/feature/37-final-example-and-readme/README.md\#installation}} entnommen werden.
+Für die Einrichtung muss müssen alle notwendigen Third"=Party"=Packages installiert werden, welche für das \texttt{dezibot}"=Package notwendig sind. Zusätzlich muss ein symbolischer Link vom Projekt"=Repository sowie \texttt{example/""Embedded\-Chess\-Pieces} in das Arduino"=Library"=Verzeichnis gelegt werden. Weitere Informationen können aus der README entnommen werden.
