--- a/article/content/usage.tex
+++ b/article/content/usage.tex
@@ -4,7 +4,7 @@
 
 Im folgenden Abschnitt wird ein Beispiel erläutert, bei dem die meisten Funktionalitäten des Projektes getestet werden können.
 
-Zunächst muss ein Schachbrett bereitgestellt werden, bei dem ein Feld jeweils \mbox{$6\times6$~cm} bis \mbox{$7\times7$~cm} groß ist. Somit wird garantiert, dass sich die Dezibots komfortabel bewegen und rotieren können. Auf dem Dezibot $D$, welcher eine Schachfigur simulieren soll, muss für die Demonstration das \texttt{examples/""showcase/""embedded\_\allowbreak chess\_\allowbreak piece.ino}\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/blob/main/example/EmbeddedChessPieces/examples/showcase/embedded_chess_piece/embedded_chess_piece.ino}} Programm $P_D$ installiert werden. Für dieses Beispiel ist ein druckbares Schachbrett im Repository der Dokumentation unter \texttt{assets/""showcase\_\allowbreak boards.pdf}\footnote{\url{https://raw.githubusercontent.com/embedded-chess/doc/refs/heads/main/assets/showcase_boards.pdf}} abgelegt.
+Zunächst muss ein Schachbrett bereitgestellt werden, bei dem ein Feld jeweils \mbox{$6\times6$~cm} bis \mbox{$7\times7$~cm} groß ist. Somit wird garantiert, dass sich ein Dezibot komfortabel bewegen und rotieren kann. Auf dem Dezibot $D$, welcher eine Schachfigur simulieren soll, muss für die Demonstration das \texttt{examples/""\nobreak{showcase/}""embedded\_\allowbreak chess\_\allowbreak piece.ino}\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/blob/main/example/EmbeddedChessPieces/examples/showcase/embedded_chess_piece/embedded_chess_piece.ino}} Programm $P_D$ installiert werden. Für dieses Beispiel ist ein druckbares Schachbrett im Repository der Dokumentation unter \texttt{assets/""showcase\_\allowbreak boards.pdf}\footnote{\url{https://raw.githubusercontent.com/embedded-chess/doc/refs/heads/main/assets/showcase_boards.pdf}} abgelegt.
 
 Ein weiterer Dezibot muss als \emph{Beacon} $B$ agieren. Dieser sendet ein Infrarot"=Signal aus, um die Rotation eines Dezibots zu regeln (vgl. \autoref{sec:movement-ir}). Dafür muss auf diesem \texttt{examples/""beacon.ino}\footnote{\url{https://github.com/embedded-chess/embedded-chess-pieces/blob/main/example/EmbeddedChessPieces/examples/beacon/beacon.ino}} $P_B$ installiert werden.
 
