--- a/assets/measurements/rotation_measurements.tex
+++ b/assets/measurements/rotation_measurements.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{r||rrr||rrr}
     & \multicolumn{3}{c||}{Links} & \multicolumn{3}{c}{Rechts} \\ \hline
-    $\varphi_{\text{initial}}$ & $\varphi_{\text{goal}}$ & $\varphi_{\text{end}}$ & $\Delta\varphi$ & $\varphi_{\text{goal}}$ & $\varphi_{\text{end}}$ & $\Delta\varphi$\\ \hline
+    $\alpha_{\text{initial}}$ & $\alpha_{\text{goal}}$ & $\alpha_{\text{end}}$ & $\Delta\alpha$ & $\alpha_{\text{goal}}$ & $\alpha_{\text{end}}$ & $\Delta\alpha$\\ \hline
     %
     0°   & 270°   & 260°    & 10°   & 90°   & 80°  & 10°  \\
     0°   & 270°   & 260°    & 10°   & 90°   & 75°  & 15°  \\
