--- a/slides/content/conclusion.tex
+++ b/slides/content/conclusion.tex
@@ -3,5 +3,16 @@
 \section{Fazit}
 
 \begin{frame}{Fazit}
-    
+    \begin{itemize}
+        \item Implementierung Grundlagen, Schachfiguren und -logik
+        \item Validierung der Züge
+        \item allgemeine Bewegung
+        \item Iterationen zur Verbesserung der Bewegungen
+        \begin{itemize}
+            \item Plausibilitätsprüfung Rotation
+            \item IR-basierte Rotation (Regelsystem)
+            \item Kalibrierung der Farberkennung
+        \end{itemize}
+        \item $>4.500$ neue Zeilen, $>300$h investierte Arbeit, $\approx50$ Seiten Dokumentation
+    \end{itemize}
 \end{frame}
