--- a/slides/content/future.tex
+++ b/slides/content/future.tex
@@ -4,9 +4,10 @@
 
 \begin{frame}{Ausblick}
     \begin{itemize}
-        \item Was steht als nächstes an? Was kann man noch tun?
-        \item Ansatzpunkte für weitere Entwicklung
-        \item Referenzen zu anderen Projekten
-        \item Abgrenzung von unserem Projekt
+        \item Implementierung Schachbrett-Logik
+        \item Kommunikation mit Server / anderen Dezibots
+        \item Schlagen anderer Figuren und Ausweichen
+        \item weitere Verbesserung der Bewegung
+        \item Integration anderer Projekte, bspw. Labyrinth oder Kommunikation
     \end{itemize}
 \end{frame}
