--- a/slides/content/intro.tex
+++ b/slides/content/intro.tex
@@ -45,7 +45,8 @@
     \begin{itemize}
         \item Verwendung
         \item Projektstruktur
-        \item Schachstrukturen \& "-logik
+        \item Schachstrukturen \& -logik
         \item Bewegungsiterationen und weitere Ansätze
+        \item Ausblick
     \end{itemize}
 \end{frame}
