--- a/slides/license.tex
+++ b/slides/license.tex
@@ -4,5 +4,8 @@
     Diese Folien sind unter der \href{https://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike 4.0 International} lizenziert. \ccbysa
     
     Das Projekt kann unter folgendem Link abgerufen werden:\\
-    \url{\projecturl}
+    \small\url{\projecturl}
+
+    Die Dokumentation ist einsehbar unter:\\
+    \small\url{https://github.com/embedded-chess/doc}
 \end{frame}
