--- a/slides/content/conclusion.tex
+++ b/slides/content/conclusion.tex
@@ -1,6 +1,16 @@
 % !TeX root = ../main.tex
 
-\section{Fazit}
+\section{Ausblick \& Fazit}
+
+\begin{frame}{Ausblick}
+    \begin{itemize}
+        \item Implementierung Schachbrett-Logik
+        \item Kommunikation mit Server / anderen Dezibots
+        \item Schlagen anderer Figuren und Ausweichen
+        \item weitere Verbesserung der Bewegung
+        \item Integration anderer Projekte, bspw. Labyrinth oder Kommunikation
+    \end{itemize}
+\end{frame}
 
 \begin{frame}{Fazit}
     \begin{itemize}
@@ -13,6 +23,8 @@
             \item IR-basierte Rotation (Regelsystem)
             \item Kalibrierung der Farberkennung
         \end{itemize}
-        \item $>4.500$ neue Zeilen, $>300$h investierte Arbeit, $\approx50$ Seiten Dokumentation
+        \item $>4.500$ neue Zeilen, $>300$h investierte Arbeit
+        \item großes Potenzial für die Zukunft \\
+            $\Rightarrow$ $\approx50$ Seiten Dokumentation
     \end{itemize}
 \end{frame}
