--- a/slides/content/future.tex
+++ b/slides/content/future.tex
@@ -1,13 +1,13 @@
 % !TeX root = ../main.tex
 
-\section{Ausblick}
+% \section{Ausblick}
 
-\begin{frame}{Ausblick}
-    \begin{itemize}
-        \item Implementierung Schachbrett-Logik
-        \item Kommunikation mit Server / anderen Dezibots
-        \item Schlagen anderer Figuren und Ausweichen
-        \item weitere Verbesserung der Bewegung
-        \item Integration anderer Projekte, bspw. Labyrinth oder Kommunikation
-    \end{itemize}
-\end{frame}
+% \begin{frame}{Ausblick}
+%     \begin{itemize}
+%         \item Implementierung Schachbrett-Logik
+%         \item Kommunikation mit Server / anderen Dezibots
+%         \item Schlagen anderer Figuren und Ausweichen
+%         \item weitere Verbesserung der Bewegung
+%         \item Integration anderer Projekte, bspw. Labyrinth oder Kommunikation
+%     \end{itemize}
+% \end{frame}
