--- a/slides/main.tex
+++ b/slides/main.tex
@@ -6,7 +6,15 @@
 
   \maketitle
 
-  \input{content/content}
+  \begin{frame}{Gliederung}
+      \tableofcontents
+  \end{frame}
+
+  \input{content/intro.tex}
+  \input{content/approach.tex}
+  \input{content/future.tex}
+  \input{content/conclusion.tex}
   \input{license}
+  \input{content/demo.tex}
 
 \end{document}
